--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
 </head>
 <body>
     
-</body><h1>Body</h1>
-<h2>hello world</h2>
-<h4>added</h4>
+</body>
 
+    <h1>Body</h1>
+    <h2>hello world</h2>
+    <h4>added</h4>
 
 </h1>
 </html>
